--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 
   <groupId>ru.job4j</groupId>
   <artifactId>job4j_todo</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
+  <packaging>war</packaging>
 
   <name>job4j_todo</name>
 
@@ -132,6 +133,14 @@
             <version>10.0</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
